# nss_custom

./: CHANGELOG  CMakeLists.txt  Makefile  getpwnam.c  nss_custom.c  nss_custom.conf  nss_custom_test.c
include/: .config.h.in.swp  config.h.in
misc/: nss-custom-0.1.ebuild  nss-custom-9999.ebuild
